docs/styles.css
:root {
  font-size: 18px;

  /* Variables */
  /* colours */
  --primary-100: hsl(171, 66%, 44%);
  --primary-200: hsl(233, 100%, 69%);

  --neutral-100: hsl(210, 10%, 33%);
  --neutral-200: hsl(201, 11%, 66%);

  /* fonts */
  --fw--400: 400;
  --fw--600: 600;

  /* breakpoints */
  --desktop: 1440px;

  /* customizing */

  --margin-between-sections: 6.5rem;
}

picture source,
img,
svg {
  max-width: 100%;
}

*,
*::before,
*::after {
  font-family: "Bai Jamjuree", sans-serif;
  font-weight: var(--fw--400);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

.flex {
  display: flex;
  justify-content: center;
}
.wrap {
  flex-wrap: wrap;
}
.grid {
  display: grid;
}

.h1,
.h2,
.h3,
.paragraph {
  width: min(100%, 600px);
  margin: 0 auto;
}
.h1,
.h2,
.h3 {
  font-weight: var(--fw--600);
  color: var(--neutral-100);
}
.h1 {
  font-size: 1.75rem;
}
.h2 {
  font-size: 1.4rem;
}
.h3 {
  font-size: 1.3rem;
}
.paragraph {
  color: var(--neutral-200);
  font-size: 0.925rem;
  line-height: 1.5;
}

.margin-row {
  margin-top: var(--margin-between-sections);
  margin-bottom: var(--margin-between-sections);
}
.container {
  width: 85%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}
.CTA-container {
  margin-block: 2rem 1rem;
  gap: 1.25rem;
}
.CTA {
  flex: 0 1 250px;
  max-width: 500px;
  position: relative;
  text-decoration: none;
  background-color: var(--primary-100);
  color: white;
  padding: 0.75em 1.2em;
  border-bottom: 4px solid rgba(0, 0, 0, 0.4);
  border-radius: 100px;
}
.CTA--alternative {
  background-color: var(--primary-200);
}
.CTA::after {
  --translate-y: 3px;
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: inherit;
  background-color: inherit;
  z-index: -1;
  transform: translateY(calc(var(--translate-y) + 2px));
  opacity: 0.6;
  filter: blur(10px);
}

/* Optimized selectors */
.hero__bg-image source,
.hero__bg-image img {
  width: inherit;
}
.hero__content,
.snippets,
.access,
.features-2 {
  display: grid;
  justify-content: center;
  gap: 0.5rem;
}
.notes,
.features-2,
.cards,
.partners__link-container {
  gap: 2.5rem;
}

/* Custom sections styles */
.hero {
  margin-top: calc(var(--margin-between-sections) / 1.2);
  z-index: 0;
}
.hero__bg-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: -1;
}
.note__header,
.features-2__header,
.card__image {
  margin-bottom: 0.5rem;
}
.hero__image {
  place-self: center;
  margin-bottom: 1.5rem;
}
.hero__image img {
  width: 85%;
}
.hero__header {
  margin-bottom: 0.5rem;
}
.hero__paragraph {
  line-break: strict;
}
.snippets__image {
  margin: 2rem 0;
}
.access__image {
  margin-top: 2.5rem;
}
.notes {
  display: grid;
  justify-content: center;
}
.note {
  max-width: 350px;
}
.features-2 {
  margin-top: var(--margin-between-sections);
}
.card {
  flex: 0 1 min(100%, 375px);
}
.card > * {
  margin-top: 0.5rem;
}
.partners__link-container {
  justify-content: center;
  margin: 0 3rem;
}
.partners__link-container > * {
  object-fit: contain;
}
.footer {
  background-color: hsl(220, 18%, 97%);
  display: grid;
  grid-auto-flow: row;
  place-content: center;
  text-align: center;
  gap: 2rem;
  padding: 1.5rem 0;
}
.footer__image {
  width: 30%;
  justify-self: center;
  align-self: center;
  margin-top: 2rem;
}
.links {
  flex-direction: column;
  gap: 1rem;
}
.links__item {
  text-decoration: none;
  color: var(--neutral-100);
}
.social-media-container {
  justify-content: space-between;
  align-items: center;
}
@media screen and (min-width: 720px) {
  .h1 {
    font-size: 2.1rem;
  }
  .h2 {
    font-size: 1.7rem;
  }
  .h3 {
    font-size: 1.5rem;
  }
  .container,
  .snippets {
    width: 90%;
  }
  .snippets {
    margin-left: 0;
    margin-right: auto;
  }
  .snippets__image {
    width: 50%;
    object-fit: contain;
    transform: translateX(-5%);
  }
  .access__image {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
  }
  .notes {
    margin-left: 5%;
    width: 45%;
    justify-content: start;
    align-content: center;
  }
  .note__header,
  .note__paragraph {
    text-align: start;
  }
  .footer {
    grid-auto-flow: column;
    gap: 0;
    grid-template-columns: 3fr 6fr 4fr;
  }
  .footer__image {
    width: 15%;
    margin: 0;
  }
  .social-media-container {
    justify-content: center;
    column-gap: 3rem;
  }
  .links {
    max-height: 80px;
    flex-wrap: wrap;
  }
}

/* Hover states */
@media screen and (hover: hover) {
  .links__item:hover {
    color: var(--primary-100);
  }
  .CTA:hover {
    filter: brightness(110%);
    border-bottom-color: rgba(0, 0, 0, 0.25);
  }
  .social-media-container svg:hover {
    cursor: pointer;
  }
  .social-media-container svg:hover path {
    fill: var(--primary-100);
  }
}

/* Active states */
.links__item:active {
  color: var(--primary-100);
}
.CTA:active {
  filter: brightness(110%);
}
.social-media-container svg:active {
  cursor: pointer;
}
.social-media-container svg:active path {
  fill: var(--primary-100);
}

